Fix horizontal logo alignment issue in IE

--- a/website/scss/site.scss
+++ b/website/scss/site.scss
@@ -30,6 +30,7 @@ body a:hover {
 
 #maincontent {
   outline: none;
+  margin: 0;
 }
 
 #logo-header {
